FIX THE RESPONSIVE LAYOUT BUG
   *Fix - It has been fixed one layout bug related to the padding

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -617,7 +617,6 @@ h3.my-profession
     margin-bottom: 30px;
     flex: 0 0 33.33%;
     max-width: 33.33%;
-    margin-left: 10%;    
 }
 
 .service .service-item .service-item-inner
@@ -645,7 +644,10 @@ h3.my-profession
     text-align: center;
 }
 
-
+.service .container .row 
+{
+    justify-content: space-between;
+}
 
 .service-img
 {
@@ -803,12 +805,12 @@ h3.my-profession
 {
     .aside
     {
-        left: -290px;
+        left: -285px;
     }
 
     .main-content
     {
-        padding-left: 0;
+        padding-left: 10px;
     }
 
     .about .about-content .personal-info .info-item p span
